catalog-wfswarm/src/main/fabric8/catalog-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: catalog
spec:
  replicas: 1
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: Rolling
  template:
    metadata:
      labels:
        app: catalog
        deploymentconfig: catalog
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_DIR
          value: /deployments
        - name: GC_MAX_METASPACE_SIZE
          value: 500
        - name: JAVA_OPTIONS
          value: "-Djava.net.preferIPv4Stack=true -Dswarm.project.stage=production -Xmx600m"
        name: catalog
        image: catalog:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - catalog
      from:
        kind: ImageStreamTag
        name: catalog:latest
    type: ImageChange
