catalog-wfswarm/src/main/fabric8/catalog-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog-database
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: catalog-database
    deploymentconfig: catalog-database
  type: LoadBalancer
