catalog-wfswarm/src/main/fabric8/catalog-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  annotations:
    description: Catalog Service based on WF Swarm
    service.alpha.openshift.io/dependencies: '[{"name":"catalog-database","namespace":"","kind":"Service"}]'
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentconfig: catalog
  type: LoadBalancer
